--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.4",
     "mongoose": "^5.3.13",
     "mongoose-unique-validator": "^2.0.2",
-    "server": "^1.0.18"
+    "server": "^1.0.18",
+    "underscore": "^1.9.1"
   }
 }
